--- a/src/components/cg-dropdown-option/cg-dropdown-option.css
+++ b/src/components/cg-dropdown-option/cg-dropdown-option.css
@@ -20,3 +20,15 @@ label {
   width: 100%;
   height: 1.5rem;
 }
+
+input[type="checkbox"]:focus {
+  outline: none;
+}
+
+input[type="checkbox"]:not(.has-checkbox) {
+  appearance: none;
+}
+
+:host(:focus-within) {
+  outline: 1px solid pink;
+}
