--- a/src/components/cg-dropdown-option/cg-dropdown-option.css
+++ b/src/components/cg-dropdown-option/cg-dropdown-option.css
@@ -13,12 +13,14 @@ label:not(.has-checkbox) {
 }
 
 li:hover {
-  background-color: #f5f5f5;
+  background-color: #affcff;
 }
 
 label {
   width: 100%;
   height: 1.5rem;
+  display: flex;
+  align-items: center;
 }
 
 input[type="checkbox"]:focus {
@@ -33,3 +35,4 @@ input[type="checkbox"]:not(.has-checkbox) {
   outline: none;
   background-color: #affcff;
 }
+  
